<resources>
    <string name="app_name">Get Go</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="rent_a_car">Rent a car</string>
    <string name="booking">Booking</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="account">Account</string>
    <string name="go">Go</string>
    <string name="locate_button">Locate button</string>
    <string name="notification_button">Notification button</string>
    <string name="search_results">Search results</string>
    <string name="car_found">Car found</string>
    <string name="_300">300+</string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="duration">Duration</string>
    <string name="now">Now</string>
    <string name="one_hr">1 hr</string>
</resources>