<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        map:menu="@menu/bottom_navigation_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        map:itemBackground="@drawable/menu_drawable_selector"
        map:itemIconTint="@color/menu_color_selector"
        map:itemTextColor="@color/menu_color_selector"
        map:labelVisibilityMode="labeled"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/white"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:srcCompat="@drawable/ic_icoactionalert"
        map:tint="@null"
        android:contentDescription="@string/notification_button" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        map:cardCornerRadius="8dp"
        map:cardElevation="4dp"
        map:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent">

        <include
            android:id="@+id/input_group"
            layout="@layout/view_input_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/rent_a_car"
        android:textStyle="bold"
        android:textColor="@color/pink"
        android:textSize="20sp"
        map:layout_constraintBottom_toTopOf="@+id/cardView"
        map:layout_constraintStart_toStartOf="@+id/cardView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/white"
        map:layout_constraintBottom_toTopOf="@+id/cardView"
        map:layout_constraintEnd_toEndOf="@+id/cardView"
        map:srcCompat="@drawable/ic_icoactionlocate"
        android:contentDescription="@string/locate_button" />

</androidx.constraintlayout.widget.ConstraintLayout>